# bedrock-material-list

./: .gitignore  Cargo.toml  LICENSE  README.md  blocks.json  mcstructure_block_states.json
src/: main.rs
src/command/: blockgen.rs  data.rs  mod.rs  structure.rs
